# backend-rs

./: Cargo.toml  README.md  build.rs  devenv.nix  flake.nix
.sqlx/: query-067b507d9473283a9360c0d2ccb3bebf1ae8bdde1b8f379263eecb63dcc40564.json  query-0afb45ac6d6d270ecf0f372101da60335136e894c2bb34544bd4b8f133aa5468.json  query-13435620fcfbfbc57c09613749974ea2d08cecbc3211d6b92d5409b17e9284b2.json  query-1727eeb698e8ddce87e263647ebcd4e0a5f9312ff5a54624d0939836dc546222.json  query-1f524a76f78932cf6e0069c882c4b8ef9aae44bff46f238c9ac80167d6c9c53c.json  query-2234fbc6405563fbd2b0a01e146cc34236d075d6debee434497f9995ff810865.json  query-28c7cd952957e611b9897e811aaa832c1141dc40e9b6b7267784aa7e7117ceda.json  query-3891c09dff1952cdbffffb89f112c32c166f32de8fec6fafaffdcc551c1a399e.json  query-4036a9b234c1b60046216760a9e342b4b95a51ee6d155530624e911c7e7f6af8.json  query-52864ab9d443aab039001085617b0515766659370188a7d4e60cdd1ef0109301.json  query-6b99c5aab3f5ac63b4827222b5866d47441360acc79dd89fe4e94bc054086c02.json  query-6d13344e3419f65ab4054d068963ea72cc9e0a709e49a30738cbfd1be4536f7c.json  query-72c73a8c9f8c7ba0203217ffc2f6410998fc95af22192051be0ac14e6d0d70b1.json  query-7d6ae45e5874721b4080a54d264507b9e4de39f95f7e495e8864ff217be395a2.json  query-8ca352623d97c97d5e35fb6430f3d7e4c5722943b7fca0d61acb3838da8480b1.json  query-8fdd407d04235d47890c23dadc359332061223a6f6f92c597d38c4a588c33c41.json  query-922b140ded04b435ba9db54a5c8e3a1362ff3d4135d28d0db90b0660e2006692.json  query-9de94dc1707303b0439252621cc87d09aad20e6453fa2feed8c7b1245b89e4ad.json  query-a56bdb60aa5085cd9e6a094b7d6d9ee3aefb0d0888e85047209dbe4b2bfbef83.json  query-b6b04e7b1743083949899d6b745c8bdb14fd07f6d984eb03f8495ebadc9a347a.json  query-c6f4cbaf577eec5562edc454e173b21260b0a6ff7bc33c64b465ec11ecdee23d.json  query-e500097932ef36f1f727e3b066d308ad5cab3e5b1dfe4653b9e55983ed2e3132.json
migrations/: 20240810172952_base.sql  20240818141731_time_not_null.sql  20240824174526_events.sql
scripts/: put-debug.sh
seeds/: 202407282355-schema-and-question.sql  202407290348-solution-video.sql  202408200211-deleted-schema-demo.sql
src/: db.rs  gql.rs  lib.rs  main.rs  rpc.rs
src/db/: cursor.rs  event.rs  question.rs  schema.rs  seeder.rs  user.rs
src/gql/: auth.rs  error.rs  poem.rs  questions.rs  schema.rs  sql_executor.rs  user.rs
tests/: database_test.rs  db_event_test.rs  db_question_test.rs  db_schema_test.rs  db_user_test.rs
tests/common/: mod.rs  sql.rs
tests/fixtures/: group.sql  question.sql  schema.sql  user.sql
