cargo-features = ["edition2024"]

[package]
name = "backend"
description = "The backend of Database Playground."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/database-playground/dbrunner-rs"
version = "0.1.0"
edition = "2024"
default-run = "backend"
publish = false

[dependencies]
anyhow = "1.0.86"
async-graphql = { version = "7.0.7", features = ["chrono"] }
async-graphql-poem = "7.0.7"
chrono = { version = "0.4.38", features = ["serde"] }
ecow = "0.2.2"
include_dir = { version = "0.7.4", features = ["nightly"] }
poem = "3.0.4"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
# Run the integration tests related to PostgreSQL.
test_database = ["seeder"]
# Build the seeder.
seeder = []

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
