cargo-features = ["edition2024"]

[package]
name = "backend"
description = "The backend of Database Playground."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/database-playground/dbrunner-rs"
version = "0.1.0"
edition = "2024"
default-run = "backend"
publish = false

[dependencies]
async-graphql = { version = "7.0.7", features = [
    "chrono",
    "graphiql",
    "tracing",
    "tempfile",
], default-features = false }
anyhow = "1.0.86"
async-graphql-poem = "7.0.7"
chrono = { version = "0.4.38", features = ["std"], default-features = false }
ecow = "0.2.2"
include_dir = { version = "0.7.4", features = ["nightly"], optional = true }
poem = "3.0.4"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12.1", features = [
    "codegen",
    "prost",
    "channel",
], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
mimalloc-rust = "0.2.1"
prost = "0.13.1"
async-trait = "0.1.81"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
cached = { version = "0.53.1", features = ["async"] }

[profile.release]
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
# Run the integration tests related to PostgreSQL.
test_database = ["seeder"]
# Build the seeder.
seeder = ["dep:include_dir"]

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["migrate"] }

[build-dependencies]
tonic-build = "0.12.1"
